# haven

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CHEZMOI_TODO.md  CLAUDE.md  Cargo.toml  README.md  TODOS.md  build.rs  design_auto_sort_brewfiles.md  index.html  install.sh  justfile  mise.toml  mkdocs.yml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: docs.yml  release.yml
.mise/tasks/: release
.plans/: prd-fix-apply-files-mise-config-sync.md  prd-fix-pkg-outdated-mise-duplicates.md  prd-mise-generate-global-config-on-apply.md  prd-pkg-command-and-backend-config.md  prd-pkg-mise-backend.md  prd-pkg-mise-regenerate-global-config.md  prd-pkg-outdated-upgrade-search.md  prd-replace-fileflags-with-entrykind-enum.md  progress-fix-apply-files-mise-config-sync.txt  progress-fix-pkg-outdated-mise-duplicates.txt  progress-mise-generate-global-config-on-apply.txt  progress-pkg-command-and-backend-config.txt  progress-pkg-mise-backend.txt  progress-pkg-mise-regenerate-global-config.txt  progress-pkg-outdated-upgrade-search.txt  progress-replace-fileflags-with-entrykind-enum.txt  tasks-fix-apply-files-mise-config-sync.yml  tasks-fix-pkg-outdated-mise-duplicates.yml  tasks-mise-generate-global-config-on-apply.yml  tasks-pkg-command-and-backend-config.yml  tasks-pkg-mise-backend.yml  tasks-pkg-mise-regenerate-global-config.yml  tasks-pkg-outdated-upgrade-search.yml  tasks-replace-fileflags-with-entrykind-enum.yml
.superset/: config.json
COMMANDS/: index.html
agents/domain/: index.html
agents/issue-tracker/: index.html
agents/triage-labels/: index.html
changelog/: index.html
concepts/: index.html
design-managed-config-sections/: index.html
designs/dfiles-ai-env-manager/: index.html
designs/diff-command/: index.html
designs/extdir-source-encoding/: index.html
designs/swappable-skill-backends/: index.html
docs/: COMMANDS.md  concepts.md  design-managed-config-sections.md  from-chezmoi.md  guide.md  index.md
docs/designs/: dfiles-ai-env-manager.md  diff-command.md  extdir-source-encoding.md  swappable-skill-backends.md
docs/for-chezmoi-users/: commands.md  gaps.md  index.md  migration.md  templates.md
docs/getting-started/: installation.md  new-machine.md  quickstart.md
docs/guides/: ai-skills.md  packages.md  (+5 more)
for-chezmoi-users/: index.html
from-chezmoi/: index.html
guide/: index.html
memory/: telemetry_Q000001.md
search/: search_index.json
site/: index.html  requirements.txt  sitemap.xml
src/: ai_config.rs  ai_platform.rs  ai_skill.rs  chezmoi.rs  chezmoi_template.rs  claude_md.rs  config_injection.rs  diff_util.rs  drift.rs  fs.rs  github.rs  homebrew.rs  ignore.rs  lock.rs  main.rs  manifest.rs  mise.rs  onepassword.rs  packages.rs  skill_backend.rs  skill_backend_agentskills.rs  skill_backend_factory.rs  skill_backend_native.rs  skill_backend_skillkit.rs  skill_cache.rs  source.rs  state.rs  telemetry.rs  template.rs  util.rs  vcs.rs
tests/: integration.rs
(+81 files in other folders)
