[package]
name = "haven"
version = "0.9.0"
edition = "2021"
description = "AI-first dotfiles & environment manager"
license = "MIT"
repository = "https://github.com/johnstegeman/haven"
homepage = "https://github.com/johnstegeman/haven"
keywords = ["dotfiles", "cli", "ai", "devtools"]
categories = ["command-line-utilities"]

[[bin]]
name = "haven"
path = "src/main.rs"

[features]
# Enable telemetry by default in special distribution builds.
# Normal builds have telemetry off by default; users opt in via haven.toml or
# the HAVEN_TELEMETRY environment variable.
telemetry-default-on = []

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
anyhow = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dirs = "5"
serde_json = "1"
tera = "1"
ureq = "2"
similar = "2"
is-terminal = "0.4"
regex = "1"
flate2 = "1"
tar = "0.4"
serde_yaml = "0.9"

[dependencies.tempfile]
version = "3"

[dev-dependencies]
insta = "1"
assert_cmd = "2"
predicates = "3"
